--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,7 @@ nav:after {
 }
 
 /* banner */
+
 #main-banner {
     background: url('../img/banner6.jpg') no-repeat;
     background-size: cover;
@@ -333,4 +334,51 @@ nav:after {
 .light-btn:hover {
     background-color: transparent;
     color: #fff;
+}
+
+/* jobfinder status */
+
+#status-container {
+    text-align: center;
+    padding: 5em 0;
+}
+
+.title-center {
+    font-size: 36px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.p-center {
+    width: 80%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 18px;
+}
+
+.status-box {
+    display: inline-block;
+    text-align: center;
+    width: 24.5%;
+    margin-top: 80px;
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    height: 100px;
+}
+
+.status-box:nth-child(2) {
+    border: none;
+}
+
+.status-box:nth-child(3) {
+    border-right: none;
+}
+
+.status-qtd {
+    font-size: 36px;
+}
+
+.status-text {
+    font-size: 20px;
 }
